Z-index of TTDBot dropdown fixed
Map overlays would go over the TTDBot slide down and cause it to close.

--- a/plugin/css/video.css
+++ b/plugin/css/video.css
@@ -595,6 +595,7 @@
   width: 210%;
   transition: transform 0.4s;
   pointer-events: none;
+  z-index: 10040;
 }
 
 .ttdbot:hover .ttdbot__dropdown {
